--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.10.9",
     "apexcharts": "^3.36.0",
+    "axios": "^1.1.3",
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
     "history": "^5.3.0",
